# Big0-dev.github.io

./: .gitignore  404.html  CLAUDE.md  INSTRUCTIONS.md  LICENSE  README.md  TEMPLATE_DIRECTIVES.md  UX_OPTIMIZATION_IDEAS.md  \  _redirects  _routes.json  about.html  blog.html  careers.html  case-studies-2.html  case-studies.html  compliance.html  contact.html  gallery-2.html  gallery.html  generate.py  generate_legacy.py  index.html  industries.html  news.html  partners.html  privacy.html  products.html  pyproject.toml  requirements.txt  resources.html  resume.html  robots.txt  rss.xml  services.html  site_config.yaml  sitemap-images.xml  sitemap.xml  terms.html  test-consent-automated.html
.claude/: launch.json
blog/: ai-transformation-2024.html  cloud-migration-best-practices.html  cybersecurity-trends-2024.html  iot-smart-cities.html
blogs/: ai-transformation-2024.html  cloud-migration-best-practices.html  cybersecurity-trends-2024.html  iot-smart-cities.html
case-studies/: agridrone.html  autonomous-sim-dispensing-robotic-system.html  bct_earpiece.html  dental_scanner.html  fedgan.html  firstclass-healthcare-document-management.html  global-logistics-dashboard.html  premium-finance-management-platform.html  real_estate_analytics_case_study.html  sports-card-trading-marketplace.html  static-site.html  veriswap-sports-card-trading-marketplace.html
functions/: _middleware.js
industries/: education.html  energy.html  finance.html  government.html  healthcare.html  manufacturing.html  retail.html  telecom.html
lighthouse-reports/: about-final.json  about.json  (+42 more)
(+1076 files in other folders)
